--- a/style.css
+++ b/style.css
@@ -475,6 +475,21 @@ footer{
     transform: translateY(-6px);
 }
 
+.project-box h3{
+    color: rgb(109,67,0);
+    margin-bottom: 10px;
+}
+
+.project-box:hover{
+    transform: translateY(-6px);
+}
+
+.project-box .resume-btn{
+    margin-top: 15px;
+    display: inline-block;
+}
+
+
 .certifications-box{
     background: rgba(255,255,255,0.9);
     border: 2px solid rgb(109,67,0);
@@ -491,7 +506,7 @@ footer{
     margin-bottom: 10px;
 }
 
-.certifications-box h4{
+.certifications-box h3{
     color: rgb(109,67,0);
     margin-bottom: 10px;
 }
@@ -583,7 +598,6 @@ nav {
 .dropdown.show ~ .main-container .image {
     pointer-events: auto;
 }
-
 
 
 
